# kodomo

./: .gitignore  .gitmodules  Cargo.toml  README.md
clients/desktop/: CMakeLists.txt  CMakePresets.json  install_deps.bat  install_deps.sh
clients/desktop/include/: kodomo.h
clients/desktop/src/: client.cpp  client.hpp  decoder.cpp  decoder.hpp  input_handler.cpp  input_handler.hpp  main.cpp  network_client.cpp  network_client.hpp  renderer.cpp  renderer.hpp
crates/kd-c/: Cargo.toml  build.rs  cbindgen.toml
crates/kd-c/src/: lib.rs
crates/kd-capture/: Cargo.toml
crates/kd-capture/src/: lib.rs  linux.rs  macos.rs  win32.rs
crates/kd-capture/src/win32/: d3d11.rs  dd.rs  frame_pool.rs  gfx_capture.rs  monitor.rs  window.rs
crates/kd-core/: Cargo.toml
crates/kd-core/src/: config.rs  engine.rs  error.rs  lib.rs  types.rs
crates/kd-encoder/: Cargo.toml
crates/kd-encoder/src/: ffmpeg_encoder.rs  lib.rs  nvenc.rs  openh264_encoder.rs  software.rs  videotoolbox.rs
crates/kd-input/: Cargo.toml
crates/kd-input/src/: events.rs  lib.rs  linux.rs  macos.rs  win32.rs
crates/kd-network/: Cargo.toml
crates/kd-network/src/: lib.rs  packet.rs  protocol.rs  udp_transport.rs  webrtc_transport.rs
crates/kd-server/: Cargo.toml  config.toml  example.toml
crates/kd-server/src/: config.rs  main.rs  metrics.rs  server.rs
docker/: Dockerfile.client  Dockerfile.optimizer  Dockerfile.server  Dockerfile.server-gpu  README.md  build-gpu.sh  build.sh  clean.sh  config.toml  docker-compose.gpu.yml  docker-compose.yml  logs.sh  prometheus.yml  run.sh  shell.sh  stop.sh  test.sh
k8s/: README.md  configmap.yaml  deploy.sh  hpa.yaml  ingress.yaml  monitoring.yaml  namespace.yaml  optimizer.yaml  persistent-volumes.yaml  secrets.yaml  streaming-server-gpu.yaml  streaming-server.yaml
python/: README.md  requirements.txt  setup.py  train.py
python/optimizer/: __init__.py  bitrate_predictor.py  data_collector.py  optimizer.py  quality_optimizer.py  trainer.py
