[workspace]
members = ["crates/kd-core", "crates/kd-encoder", "crates/kd-c", "crates/kd-network", "crates/kd-capture", "crates/kd-input", "crates/kd-server"]
resolver = "2"
default-members = [
    "crates/kd-c",
    "crates/kd-server"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bytes = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"]}
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
libc = "1.0.0-alpha.1"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
inherits = "release"
debug = true
