[package]
name = "kd-encoder"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
bytes.workspace = true
serde.workspace = true
openh264 = { version = "0.6", optional = true }

[features]
default = ["openh264"]
ffmpeg = ["dep:ffmpeg-next"]
x264 = []

# Optional FFmpeg support (software fallback)
[dependencies.ffmpeg-next]
version = "8.0.0"
optional = true

# Platform-specific hardware encoders
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Graphics_Direct3D11",
    "Win32_System_Com",
], optional = true }